--- a/auth-server/package.json
+++ b/auth-server/package.json
@@ -15,6 +15,7 @@
         "axios": "^1.7.2",
         "body-parser": "^1.20.2",
         "cookie-parser": "^1.4.6",
+        "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "pug": "^3.0.3",
         "url-join": "^5.0.0"
